attempting to fix bloat and broken css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,13 +61,13 @@ header button {
     text-decoration: underline;
 }
 
+
 article {
 display: flex;
 flex-direction: row;
 align-items: center;
 justify-content: center;
 margin-bottom: 20px;
-padding: 50;
 height:300px;
 border-color:#171a19;
 border-radius: 2px;
@@ -78,7 +78,9 @@ article h2 {
     display: flex;
     max-height:200px;
     font-size: 36px;
-    
+    padding: 50px; 
+    text-align: center;
+    border-right: 3px solid black;    
 }
 
 article img {
@@ -127,14 +129,13 @@ article div{
 }
 
 
-/* 
+
 .test {
-    display: flex;
-     justify-content: flex-end;
+    z-index: 1;
    
 }
 
-#test:hover {
+/* #test:hover {
     color: var(--color1);
     opacity: 100%;
 } */
@@ -191,7 +192,7 @@ table td:hover {
 
  .banner {
         width: 100%;
-
+        z-index: 2;
     } 
 
 @media screen and (max-width: 789px) {
